deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: 992382496772.dkr.ecr.ap-south-1.amazonaws.com/assignment/images # Replace with your ECR image URL
          ports:
            - containerPort: 3000
