service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-js-app-service
  namespace: default
spec:
  selector:
    app: my-js-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort # Or NodePort if you are not using a cloud provider with LoadBalancer support
